MGCP RA v2 emmartins
git-svn-id: http://mobicents.googlecode.com/svn/trunk@381 bf0df8d0-2c1f-0410-b170-bd30377b63dc